Fixed name taking up 2 lines on mobile devices

--- a/style.css
+++ b/style.css
@@ -49,18 +49,18 @@ nav {
   justify-content: space-between;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
   body {
-    margin: 5vh 40px;
+    margin: 5vh 20px;
   }
   h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   #headshot {
     height: 200px;
   }
   nav {
-    max-width: 20em;
+    max-width: 15em;
     justify-content: space-between;
   }
   nav i {
